# robot_properties_kuka

./: .gitignore  CMakeLists.txt  DEADJOE  README.md  package.xml  readme.md  setup.cfg  setup.py
config/: dgm_iiwa.yaml  iiwa.yaml  iiwa_wrench.yaml
demos/: bullet_iiwa.py  demo_display_iiwa.py  demo_display_iiwa_meshcat.py  demo_iiwa.py  demo_iiwa_collision_detection.py  demo_simulate_iiwa.py
launch/: launch_rviz.launch
python/robot_properties_iiwa/: robot.py
rqt/: iiwa.perspective  rqt_torques.perspective
scripts/: gepetto_gui_visualization  rviz_visualization
src/py_robot_properties_iiwa/: config.py  config_reduced.py  iiwawrapper.py  robot.py  robot_reduced.py
src/robot_properties_kuka/: IiwaWrapper.py  config.py  gepetto_gui_loader.py  iiwaReducedWrapper.py  iiwaWrapper.py  utils.py
src/robot_properties_kuka/resources/launch/: launch_iiwa_dashboard.launch  visual_rviz.launch
src/robot_properties_kuka/resources/pre_generated_urdf/: iiwa.urdf
src/robot_properties_kuka/resources/srdf/: iiwa.srdf
src/robot_properties_kuka/resources/urdf/: iiwa.urdf
src/robot_properties_kuka/resources/xacro/: backup.xml  backup2.xml  iiwa.transmission.xacro  iiwa.urdf.xacro  iiwa.xacro
src/robot_properties_kuka/robot_properties_kuka/: iiwa.urdf  plane_with_restitution.urdf
src/robot_properties_kuka/robot_properties_kuka/dynamic_graph_manager/: dgm_parameters_iiwa.yaml
src/robot_properties_kuka/robot_properties_kuka/launch/: bringup.launch  dashboard.launch  rviz.launch
src/robot_properties_kuka/robot_properties_kuka/meshes/: iiwa_link_1.dae
src/robot_properties_kuka/robot_properties_kuka/meshes/dae/: iiwa_base.dae  iiwa_link_2.dae  iiwa_link_3.dae  iiwa_link_4.dae  iiwa_link_5.dae  iiwa_link_6.dae
src/robot_properties_kuka/robot_properties_kuka/rqt/: iiwa.perspective
src/robot_properties_kuka/robot_properties_kuka/xacro/: iiwa.gazebo.xacro  iiwa.urdf.xacro  iiwa.xacro  iiwa_ft_sensor_ball.urdf.xacro  iiwa_ft_sensor_ball.xacro  iiwa_ft_sensor_shell.urdf.xacro  iiwa_ft_sensor_shell.xacro  plane_with_restitution.urdf.xacro
urdf/: KUKAiiwa14_mesh.urdf  iiwa.urdf
