<?xml version="1.0"?>
<package>
  <name>robot_properties_iiwa</name>
  <version>1.0.0</version>
  <description>The robot_properties_iiwa package</description>
  <author email="pfleginj@ethz.ch">Johannes pfleging</author>
  <maintainer email="pfleginj@ethz.ch">Johannes Pfleging</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- We need the xacro package to build the urdf model -->
  <build_depend> xacro </build_depend>
  <run_depend>   xacro </run_depend>

  <export>
  </export>
</package>
