<?xml version="1.0"?>
<package format="3">
  <name>robot_properties_iiwa</name>
  <version>1.0.0</version>
  <description>The robot_properties_iiwa package</description>
  <author email="pfleginj@ethz.ch">Johannes pfleging</author>
  <author email="sk8001@nyu.edu">Sébastien Kleff</author>
  <maintainer email="sk8001@nyu.edu">Sébastien Kleff</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>mpi_cmake_modules</buildtool_depend>
  <!-- We need the xacro package to build the urdf model -->
  <depend> xacro </depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
